Profile plus Auth Modified

--- a/backend/.env
+++ b/backend/.env
@@ -1,20 +1,11 @@
 PORT=3000
 NODE_ENV=development
-
-# MongoDB
 MONGO_URL=mongodb+srv://Kavin_14:1421Kavin@godevs.cfgexon.mongodb.net/?retryWrites=true&w=majority
-
-# JWT
-JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_random_taatom_2024
-
-# Cloudinary
+DB_NAME=Taatom
+JWT_SECRET=your_jwt_secret_key_here_make_it_long_and_secure
 CLOUDINARY_CLOUD_NAME=dcvdqhqzc
 CLOUDINARY_API_KEY=334331849171356
 CLOUDINARY_API_SECRET=iE5awSFtO-dNpFoMFKXOfJlGD2U
-
-# Email (Nodemailer)
 EMAIL_USER=godevsteam@gmail.com
 EMAIL_PASS=caoq rzgx luql sayp
-
-# Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:8081
+GOOGLE_WEB_CLIENT_ID=236289534770-vvfj6c8611ci84aja7jsvd67rrj4uprv.apps.googleusercontent.com
