--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
 API_BASE_URL=http://localhost:3000
+GOOGLE_WEB_CLIENT_ID=236289534770-vvfj6c8611ci84aja7jsvd67rrj4uprv.apps.googleusercontent.com
+EXPO_REDIRECT_URI=https://auth.expo.io/@teamgodevs/taatom
