--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,12 @@
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.5",
+    "@react-three/fiber": "^9.3.0",
     "axios": "^1.11.0",
     "expo": "~53.0.20",
+    "expo-auth-session": "^6.2.1",
+    "expo-constants": "^17.1.7",
+    "expo-crypto": "^14.1.5",
     "expo-file-system": "~18.1.11",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
@@ -23,7 +27,6 @@
     "expo-router": "^5.1.4",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
-
     "formik": "^2.4.6",
     "react": "19.0.0",
     "react-native": "0.79.5",
@@ -31,7 +34,11 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.1",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-webview": "^13.15.0",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.179.1",
     "yup": "^1.7.0"
   },
   "devDependencies": {
