--- a/backend/env.example
+++ b/backend/env.example
@@ -18,3 +18,7 @@ EMAIL_PASS=your_app_password
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:8081
+
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REDIRECT_URI=your_google_redirect_uri
