--- a/backend/environment.env
+++ b/backend/environment.env
@@ -18,3 +18,7 @@ EMAIL_PASS=caoq rzgx luql sayp
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:8081
+
+GOOGLE_CLIENT_ID=236289534770-a6be8j239t504vq9o8mt8qgeh2nsu9h0.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=https://auth.expo.io/@teamgodevs/taatom
