--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "^13.15.0",
     "react-three-fiber": "^6.0.13",
+    "socket.io-client": "^4.8.1",
     "three": "^0.179.1",
     "yup": "^1.7.0"
   },
