Backend - Forgot Password Logic Implemented

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,9 @@
 PORT=3000
 NODE_ENV=development
 
+#Node
+BACKEND_URL=http://localhost:3000
+
 # MongoDB
 MONGO_URL=mongodb+srv://Kavin_14:1421Kavin@godevs.cfgexon.mongodb.net/?retryWrites=true&w=majority
 
