--- a/backend/environment.env
+++ b/backend/environment.env
@@ -12,14 +12,20 @@ CLOUDINARY_CLOUD_NAME=dcvdqhqzc
 CLOUDINARY_API_KEY=334331849171356
 CLOUDINARY_API_SECRET=iE5awSFtO-dNpFoMFKXOfJlGD2U
 
+"LOGO_IMAGE": "https://res.cloudinary.com/dcvdqhqzc/image/upload/v1756537440/bokj2vfio8cenbo6wfea.png"
+
 # Email (Nodemailer)
 EMAIL_USER=godevsteam@gmail.com
 EMAIL_PASS=caoq rzgx luql sayp
 
 # Frontend URL (for CORS)
 
-FRONTEND_URL=http://192.168.1.7:8081
-API_BASE_URL=http://192.168.1.7:3000
+#FRONTEND_URL=http://192.168.1.7:8081
+#API_BASE_URL=http://192.168.1.7:3000
+
+FRONTEND_URL=http://192.168.1.8:8081
+API_BASE_URL=http://192.168.1.8:3000
+
 
 #Google Map Auth
 GOOGLE_CLIENT_ID=236289534770-a6be8j239t504vq9o8mt8qgeh2nsu9h0.apps.googleusercontent.com
