--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,7 +16,7 @@
     "@react-navigation/stack": "^7.4.5",
     "@react-three/fiber": "^9.3.0",
     "axios": "^1.11.0",
-    "expo": "~53.0.20",
+    "expo": "53.0.22",
     "expo-auth-session": "^6.2.1",
     "expo-constants": "^17.1.7",
     "expo-crypto": "^14.1.5",
@@ -24,23 +24,26 @@
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-location": "^18.1.6",
-    "expo-router": "^5.1.4",
+    "expo-notifications": "~0.31.4",
+    "expo-router": "~5.1.5",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "formik": "^2.4.6",
+    "node-fetch": "^3.3.2",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-webview": "^13.15.0",
+    "react-native-webview": "13.13.5",
     "react-three-fiber": "^6.0.13",
     "socket.io-client": "^4.8.1",
     "three": "^0.179.1",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
