--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.11.0",
     "expo": "~54.0.0",
     "expo-auth-session": "~7.0.8",
+    "expo-av": "~16.0.7",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
     "expo-file-system": "~19.0.17",
@@ -26,6 +27,7 @@
     "expo-location": "~19.0.7",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.12",
+    "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "formik": "^2.4.6",
