--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
     "expo-file-system": "~19.0.17",
+    "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
