--- a/SuperAdmin/package.json
+++ b/SuperAdmin/package.json
@@ -13,11 +13,20 @@
     "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1",
+    "react-select": "^5.8.0",
+    "react-table": "^7.8.0",
     "recharts": "^2.8.0",
+    "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
@@ -27,7 +36,7 @@
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "globals": "^16.4.0",
