--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-video-thumbnails": "~10.0.7",
     "formik": "^2.4.6",
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
