--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.5",
@@ -19,6 +19,7 @@
     "expo": "~54.0.0",
     "expo-auth-session": "~7.0.8",
     "expo-av": "~16.0.7",
+    "expo-camera": "^17.0.8",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
     "expo-file-system": "~19.0.17",
@@ -26,6 +27,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
+    "expo-media-library": "^18.2.0",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.12",
     "expo-sharing": "~14.0.7",
@@ -38,12 +40,13 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
+    "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-webview": "13.15.0",
+    "react-native-webview": "^13.15.0",
     "react-native-worklets": "^0.6.1",
     "react-native-worklets-core": "^1.6.2",
     "react-three-fiber": "^6.0.13",
