--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "formik": "^2.4.6",
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
@@ -46,6 +47,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.0",
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "^0.6.1",
     "react-native-worklets-core": "^1.6.2",
