--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csrf": "^3.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
@@ -32,7 +34,8 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
