--- a/backend/env.example
+++ b/backend/env.example
@@ -19,6 +19,12 @@ EMAIL_PASS=your_app_password
 # Frontend URL (for CORS)
 FRONTEND_URL=http://192.168.1.9:8081
 
+# Redis Configuration (for background jobs)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+ENABLE_BACKGROUND_JOBS=false
+
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 GOOGLE_REDIRECT_URI=your_google_redirect_uri
