--- a/backend/environment.env
+++ b/backend/environment.env
@@ -27,6 +27,12 @@ FRONTEND_URL=http://192.168.1.9:8081
 API_BASE_URL=http://192.168.1.9:3000
 
 
+# Redis Configuration (for background jobs)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+ENABLE_BACKGROUND_JOBS=true
+
 #Google Map Auth
 GOOGLE_CLIENT_ID=236289534770-a6be8j239t504vq9o8mt8qgeh2nsu9h0.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
