--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js up",
+    "migrate:down": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js down",
+    "migrate:status": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js status",
+    "migrate:create": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js create"
   },
   "keywords": [
     "express",
@@ -19,6 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bull": "^4.16.5",
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -30,10 +35,12 @@
     "google-auth-library": "^10.2.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "migrate-mongo": "^12.1.3",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7",
+    "redis": "^4.7.1",
     "socket.io": "^4.8.1",
     "xss": "^1.0.15"
   },
