--- a/backend/.env
+++ b/backend/.env
@@ -22,9 +22,9 @@ SMTP_PASS=caoq rzgx luql sayp
 SMTP_FROM=godevsteam@gmail.com
 
 # URLs & CORS
-FRONTEND_URL=http://192.168.1.9:8081
-API_BASE_URL=http://192.168.1.9:3000
-SUPERADMIN_URL=http://localhost:5001
+FRONTEND_URL=http://192.168.1.12:8081
+API_BASE_URL=http://192.168.1.12:3000
+SUPERADMIN_URL=http://192.168.1.12:5001
 
 # Redis
 REDIS_HOST=localhost
