--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,8 @@
     "nodemailer": "^6.9.7",
     "redis": "^4.7.1",
     "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "xss": "^1.0.15"
   },
   "devDependencies": {
