Mongoose Fix | Cache Fix and Query Optimizations

--- a/backend/.env
+++ b/backend/.env
@@ -40,3 +40,11 @@ GOOGLE_REDIRECT_URI=https://auth.expo.io/@teamgodevs/taatom
 # WebSocket
 WS_ALLOWED_ORIGIN=http://localhost:19006
 WS_PATH=/socket.io
+
+#Connection Pool Settings
+MONGO_MAX_POOL_SIZE=10
+MONGO_MIN_POOL_SIZE=2
+MONGO_MAX_IDLE_TIME_MS=30000
+MONGO_SERVER_SELECTION_TIMEOUT_MS=5000
+MONGO_SOCKET_TIMEOUT_MS=45000
+MONGO_CONNECT_TIMEOUT_MS=10000
