Count Views Partial

--- a/backend/.env
+++ b/backend/.env
@@ -92,3 +92,12 @@ SLOW_QUERY_THRESHOLD=100
 # BACKGROUND JOBS
 # ============================================
 ENABLE_BACKGROUND_JOBS=true
+
+# ============================================
+#AWS
+# ============================================
+AWS_ACCESS_KEY_ID=AKIARQGVWK6DVT3Q32N4
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-east-1
+AWS_S3_BUCKET_NAME=taatom-s3-testing
+AWS_CLOUDFRONT_URL=https://d26vwbp8ejhrq9.cloudfront.net
