--- a/backend/.env
+++ b/backend/.env
@@ -98,6 +98,6 @@ ENABLE_BACKGROUND_JOBS=true
 # ============================================
 AWS_ACCESS_KEY_ID=AKIARQGVWK6DVT3Q32N4
 AWS_SECRET_ACCESS_KEY=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
-AWS_REGION=us-east-1
+AWS_REGION=ap-south-1
 AWS_S3_BUCKET_NAME=taatom-s3-testing
 AWS_CLOUDFRONT_URL=https://d26vwbp8ejhrq9.cloudfront.net
