--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
     "cloudinary": "^1.41.0",
@@ -45,6 +46,7 @@
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^9.0.1",
     "xss": "^1.0.15"
   },
   "devDependencies": {
