--- a/SuperAdmin/package.json
+++ b/SuperAdmin/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "dompurify": "^3.3.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
