--- a/SuperAdmin/package.json
+++ b/SuperAdmin/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^10.29.0",
     "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
