--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.947.0",
+    "@aws-sdk/s3-request-presigner": "^3.947.0",
+    "@sentry/node": "^10.29.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
     "cloudinary": "^1.41.0",
