--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.5",
     "@react-three/fiber": "^9.3.0",
+    "@sentry/react-native": "^7.7.0",
     "axios": "^1.11.0",
     "expo": "~54.0.25",
     "expo-auth-session": "~7.0.9",
