--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:tripVisit": "jest src/__tests__/tripVisitService.test.js",
     "migrate": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js up",
     "migrate:down": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js down",
     "migrate:status": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js status",
@@ -52,6 +55,8 @@
     "xss": "^1.0.15"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.4"
   }
 }
