--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     "jwt",
     "otp"
   ],
-  "author": "Your Name",
+  "author": "Taatom",
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.947.0",
@@ -39,6 +39,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "firebase-admin": "^13.6.0",
     "google-auth-library": "^10.2.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
