--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.947.0",
     "@aws-sdk/s3-request-presigner": "^3.947.0",
+    "@react-native-firebase/app": "^23.7.0",
+    "@react-native-firebase/messaging": "^23.7.0",
     "@sentry/node": "^10.29.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
