--- a/SuperAdmin/package.json
+++ b/SuperAdmin/package.json
@@ -38,6 +38,7 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
+    "baseline-browser-mapping": "^2.9.9",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.0",
