--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,26 +17,26 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.5",
     "@react-three/fiber": "^9.3.0",
-    "@sentry/react-native": "^7.7.0",
+    "@sentry/react-native": "~7.2.0",
     "axios": "^1.11.0",
-    "expo": "~54.0.25",
-    "expo-auth-session": "~7.0.9",
-    "expo-av": "~16.0.7",
-    "expo-camera": "~17.0.9",
-    "expo-constants": "~18.0.10",
-    "expo-crypto": "~15.0.7",
-    "expo-file-system": "~19.0.19",
-    "expo-image-manipulator": "^14.0.7",
-    "expo-image-picker": "~17.0.8",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-location": "~19.0.7",
-    "expo-media-library": "^18.2.0",
-    "expo-notifications": "~0.32.13",
-    "expo-router": "~6.0.15",
-    "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.11",
-    "expo-status-bar": "~3.0.8",
-    "expo-video-thumbnails": "~10.0.7",
+    "expo": "~54.0.29",
+    "expo-auth-session": "~7.0.10",
+    "expo-av": "~16.0.8",
+    "expo-camera": "~17.0.10",
+    "expo-constants": "~18.0.12",
+    "expo-crypto": "~15.0.8",
+    "expo-file-system": "~19.0.21",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-location": "~19.0.8",
+    "expo-media-library": "~18.2.1",
+    "expo-notifications": "~0.32.15",
+    "expo-router": "~6.0.19",
+    "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-video-thumbnails": "~10.0.8",
     "formik": "^2.4.6",
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
