feat: Add expo-web-browser for policy links with environment-based URLs
- Install expo-web-browser package for better in-app browser experience
- Create frontend/constants/policies.ts with environment variable constants
- Update AboutPolicies component to use WebBrowser.openBrowserAsync()
- Replace hardcoded URLs with environment variables (PRIVACY_URL, TERMS_URL, COPYRIGHT_URL)
- Add policy URLs to .env file
- Update app.json to include policies/ in assetBundlePatterns
- iOS: Opens in-app Safari sheet
- Android: Opens in-app browser
- Web: Opens in new tab
- Verified web export builds successfully

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-API_BASE_URL=http://192.168.1.4:3000
-EXPO_PUBLIC_API_BASE_URL= http://192.168.1.4:3000
+API_BASE_URL=http://192.168.1.3:3000
+EXPO_PUBLIC_API_BASE_URL= http://192.168.1.3:3000
 GOOGLE_WEB_CLIENT_ID=236289534770-vvfj6c8611ci84aja7jsvd67rrj4uprv.apps.googleusercontent.com
 EXPO_REDIRECT_URI=https://auth.expo.io/@teamgodevs/taatom
 LOGO_IMAGE=https://res.cloudinary.com/dcvdqhqzc/image/upload/v1756537440/bokj2vfio8cenbo6wfea.png
@@ -14,3 +14,7 @@ EXPO_PUBLIC_LOG_LEVEL=debug
 NODE_ENV=development
 # Logo
 LOGO_IMAGE=https://res.cloudinary.com/dcvdqhqzc/image/upload/v1756537440/bokj2vfio8cenbo6wfea.png
+# Policy URLs
+EXPO_PUBLIC_PRIVACY_URL=https://taatom.com/privacy
+EXPO_PUBLIC_TERMS_URL=https://taatom.com/terms
+EXPO_PUBLIC_COPYRIGHT_URL=https://taatom.com/copyright
