--- a/frontend/app.json
+++ b/frontend/app.json
@@ -13,11 +13,12 @@
       "backgroundColor": "#000000"
     },
     "assetBundlePatterns": [
-      "**/*"
+      "**/*",
+      "policies/**/*"
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.taatom.demo",
+      "bundleIdentifier": "com.taatom.app",
       "buildNumber": "1.0.0",
       "deploymentTarget": "13.0",
       "infoPlist": {
@@ -26,6 +27,7 @@
         "NSLocationWhenInUseUsageDescription": "This app needs access to your location to tag your posts with location information.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "This app needs access to your location to tag your posts with location information.",
         "NSMicrophoneUsageDescription": "This app needs access to your microphone for video recording.",
+        "NSUserTrackingUsageDescription": "We use your data to personalize your experience and show you relevant content. This helps us improve the app and provide better features.",
         "UIBackgroundModes": [
           "audio",
           "location",
@@ -35,7 +37,7 @@
           {
             "CFBundleURLSchemes": [
               "taatom",
-              "com.taatom.demo"
+              "com.taatom.app"
             ]
           }
         ]
@@ -46,7 +48,7 @@
       "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
-      "package": "com.taatom.demo",
+      "package": "com.taatom.app",
       "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
@@ -64,11 +66,6 @@
             {
               "scheme": "taatom",
               "host": "*"
-            },
-            {
-              "scheme": "http",
-              "host": "localhost",
-              "port": "3000"
             },
             {
               "scheme": "https",
@@ -132,15 +129,15 @@
       ]
     ],
     "extra": {
-      "API_BASE_URL": "http://192.168.1.4:3000",
-      "WEB_SHARE_URL": "http://192.168.1.4:3000",
+      "API_BASE_URL": "http://192.168.1.3:3000",
+      "WEB_SHARE_URL": "http://localhost:3000",
       "GOOGLE_MAPS_API_KEY": "AIzaSyBV-jFFSI6o--8SiXjzPYon8WH4slor9Co",
       "LOGO_IMAGE": "https://res.cloudinary.com/dcvdqhqzc/image/upload/v1756537440/bokj2vfio8cenbo6wfea.png",
       "EXPO_PROJECT_ID": "10a6919b-ba8b-4dfb-b379-d36909e67701",
-      "GOOGLE_CLIENT_ID": "236289534770-a6be8j239t504vq9o8mt8qgeh2nsu9h0.apps.googleusercontent.com",
-      "GOOGLE_CLIENT_ID_IOS": "236289534770-a6be8j239t504vq9o8mt8qgeh2nsu9h0.apps.googleusercontent.com",
-      "GOOGLE_CLIENT_ID_ANDROID": "236289534770-a6be8j239t504vq9o8mt8qgeh2nsu9h0.apps.googleusercontent.com",
-      "GOOGLE_REDIRECT_URI": "https://auth.expo.io/@teamgodevs/taatom"
+      "GOOGLE_CLIENT_ID": "",
+      "GOOGLE_CLIENT_ID_IOS": "",
+      "GOOGLE_CLIENT_ID_ANDROID": "",
+      "GOOGLE_REDIRECT_URI": ""
     }
   }
 }
