--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,9 @@
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
+    "expo-tracking-transparency": "^6.0.8",
     "expo-video-thumbnails": "~10.0.8",
+    "expo-web-browser": "^15.0.10",
     "formik": "^2.4.6",
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
