--- a/frontend/.env
+++ b/frontend/.env
@@ -14,7 +14,6 @@ EXPO_PUBLIC_LOG_LEVEL=debug
 NODE_ENV=development
 # Logo
 LOGO_IMAGE=https://res.cloudinary.com/dcvdqhqzc/image/upload/v1756537440/bokj2vfio8cenbo6wfea.png
-# Policy URLs
-EXPO_PUBLIC_PRIVACY_URL=https://taatom.com/privacy
-EXPO_PUBLIC_TERMS_URL=https://taatom.com/terms
-EXPO_PUBLIC_COPYRIGHT_URL=https://taatom.com/copyright
+
+# Web Share URL (for policy pages and post sharing)
+EXPO_PUBLIC_WEB_SHARE_URL=http://localhost:3000
