--- a/backend/.env
+++ b/backend/.env
@@ -11,7 +11,9 @@ STRUCTURED_LOGGING=true
 # ============================================
 # Database
 MONGO_URL=mongodb+srv://Kavin_14:1421Kavin@godevs.cfgexon.mongodb.net/Taatom?retryWrites=true&w=majority
-
+MONGO_DB_NAME=Taatom
+#Swagger
+ENABLE_SWAGGER=true
 
 # MONGO_URL=mongodb+srv://taatom-prod:5MQc9GKlVWIe0EwI@taatomtechnologies.xgnf4hy.mongodb.net/TaatomProd?retryWrites=true&w=majority
 
