--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -2,16 +2,16 @@
 # SERVER CONFIGURATION
 #============================================
 # Server
-PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 LOG_LEVEL=debug
 STRUCTURED_LOGGING=true
+ENABLE_SWAGGER=true
 # ============================================
 # DATABASE CONFIGURATION (MongoDB)
 # ============================================
 # Database
 MONGO_URL=mongodb+srv://taatom-prod:5MQc9GKlVWIe0EwI@taatomtechnologies.xgnf4hy.mongodb.net/TaatomProd?retryWrites=true&w=majority
-
+MONGO_DB_NAME=TaatomProd
 # ============================================
 # JWT AUTHENTICATION
 # ============================================
