--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "prestart": "node scripts/copy-policies.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -13,7 +14,8 @@
     "migrate": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js up",
     "migrate:down": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js down",
     "migrate:status": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js status",
-    "migrate:create": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js create"
+    "migrate:create": "node ./node_modules/migrate-mongo/bin/migrate-mongo.js create",
+    "copy-policies": "node scripts/copy-policies.js"
   },
   "keywords": [
     "express",
@@ -44,6 +46,7 @@
     "google-auth-library": "^10.2.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^17.0.1",
     "migrate-mongo": "^12.1.3",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
