--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -37,8 +37,8 @@ SMTP_FROM=official.taatom@gmail.com
 
 # URLs & CORS
 FRONTEND_URL=http://192.168.1.3:8081
-API_BASE_URL=http://192.168.1.3:3000
-SUPERADMIN_URL=http://192.168.1.3:5001
+API_BASE_URL=https://taatombackend-prod-yf2tz.sevalla.app
+SUPERADMIN_URL=https://team-taatom.vercel.app
 
 # ============================================
 # REDIS CONFIGURATION (For Background Jobs & Caching)
