--- a/SuperAdmin/.env.prod
+++ b/SuperAdmin/.env.prod
@@ -1,5 +1,5 @@
 
-VITE_API_URL=https://taatombackend-prod-yf2tz.sevalla.app/
+VITE_API_URL=https://taatombackend-prod-yf2tz.sevalla.app
 VITE_APP_NAME=Taatom SuperAdmin
 VITE_APP_VERSION=1.0.0
 VITE_DEV_MODE=true
@@ -10,3 +10,8 @@ VITE_ENABLE_EXPORT_FEATURES=true
 VITE_SENTRY_DSN=https://b3c4e3ec4b6e4f559c0fd641a8fe19ee@o4510597105319936.ingest.us.sentry.io/4510597161091072
 VITE_SENTRY_SEND_DEFAULT_PII=true
 VITE_SENTRY_ENVIRONMENT=production
+
+
+
+
+
