--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@aws-sdk/s3-request-presigner": "^3.947.0",
     "@react-native-firebase/app": "^23.7.0",
     "@react-native-firebase/messaging": "^23.7.0",
+    "@sendinblue/client": "^3.3.1",
     "@sentry/node": "^10.29.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
