--- a/backend/.env
+++ b/backend/.env
@@ -16,7 +16,7 @@ MONGO_DB_NAME=Taatom
 ENABLE_SWAGGER=true
 
 # MONGO_URL=mongodb+srv://taatom-prod:5MQc9GKlVWIe0EwI@taatomtechnologies.xgnf4hy.mongodb.net/TaatomProd?retryWrites=true&w=majority
-
+# MONGO_DB_NAME=TaatomProd
 # ============================================
 # JWT AUTHENTICATION
 # ============================================
