--- a/frontend/.env
+++ b/frontend/.env
@@ -16,4 +16,13 @@ NODE_ENV=development
 LOGO_IMAGE=https://res.cloudinary.com/dcvdqhqzc/image/upload/v1756537440/bokj2vfio8cenbo6wfea.png
 
 # Web Share URL (for policy pages and post sharing)
-EXPO_PUBLIC_WEB_SHARE_URL=http://localhost:3000
+EXPO_PUBLIC_WEB_SHARE_URL=http://localhost:8081
+
+# Privacy Policy URL (points to your app's /policies/privacy route)
+EXPO_PUBLIC_PRIVACY_POLICY_URL=http://localhost:8081/policies/privacy
+
+# Terms of Service URL (optional, but recommended)
+EXPO_PUBLIC_TERMS_OF_SERVICE_URL=http://localhost:8081/policies/terms
+
+# Support URL (optional, but recommended)
+EXPO_PUBLIC_SUPPORT_URL=http://localhost:8081/support/contact
