--- a/frontend/.env.prod
+++ b/frontend/.env.prod
@@ -16,4 +16,15 @@ NODE_ENV=production
 LOGO_IMAGE=https://res.cloudinary.com/dcvdqhqzc/image/upload/v1756537440/bokj2vfio8cenbo6wfea.png
 
 # Web Share URL (for policy pages and post sharing)
-EXPO_PUBLIC_WEB_SHARE_URL=http://localhost:3000
+EXPO_PUBLIC_WEB_SHARE_URL=http://localhost:8081
+# Your web app base URL (where the app is deployed/hosted)
+EXPO_PUBLIC_WEB_SHARE_URL=https://taatom.com
+
+# Privacy Policy URL (points to your app's /policies/privacy route)
+EXPO_PUBLIC_PRIVACY_POLICY_URL=https://taatom.com/policies/privacy
+
+# Terms of Service URL (optional, but recommended)
+EXPO_PUBLIC_TERMS_OF_SERVICE_URL=https://taatom.com/policies/terms
+
+# Support URL (optional, but recommended)
+EXPO_PUBLIC_SUPPORT_URL=https://taatom.com/support/contact
