--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web",
     "update-config": "node scripts/update-app-json.js",
     "prestart": "npm run update-config",
+    "verify-build": "node scripts/verify-build.js",
+    "prebuild": "npm run update-config && npm run verify-build",
     "build:web": "expo export --platform web --output-dir dist --source-maps",
     "build:analyze": "node scripts/analyze-bundle.js",
     "postbuild:web": "npm run build:analyze",
@@ -41,6 +43,7 @@
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-tracking-transparency": "^6.0.8",
+    "expo-updates": "~29.0.15",
     "expo-video-thumbnails": "~10.0.8",
     "expo-web-browser": "^15.0.10",
     "formik": "^2.4.6",
