--- a/backend/.env
+++ b/backend/.env
@@ -45,7 +45,7 @@ BREVO_API_KEY=xkeysib-3d40d41c0f230633bcc3f0328396b5752fd3956655d87bcb98056b8edf
 
 
 # URLs & CORS
-FRONTEND_URL=http://192.168.1.9:8081
+# FRONTEND_URL=http://192.168.1.9:8081
 API_BASE_URL=http://192.168.1.9:3000
 SUPERADMIN_URL=http://192.168.1.9:5001
 
