--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.12",
     "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.21",
     "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.10",
