--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,7 @@
-API_BASE_URL=http://192.168.1.9:3000
-EXPO_PUBLIC_API_BASE_URL= http://192.168.1.9:3000
-GOOGLE_WEB_CLIENT_ID=236289534770-vvfj6c8611ci84aja7jsvd67rrj4uprv.apps.googleusercontent.com
-EXPO_REDIRECT_URI=https://auth.expo.io/@teamgodevs/taatom
+API_BASE_URL=http://192.168.1.3:3000
+EXPO_PUBLIC_API_BASE_URL= http://192.168.1.3:3000
+GOOGLE_WEB_CLIENT_ID=139138195988-kclhcnave5urmm7ob2o2erkebp9o4f90.apps.googleusercontent.com
+EXPO_REDIRECT_URI=https://auth.expo.io/@taatom/taatom
 LOGO_IMAGE=https://res.cloudinary.com/dcvdqhqzc/image/upload/v1756537440/bokj2vfio8cenbo6wfea.png
 EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyBV-jFFSI6o--8SiXjzPYon8WH4slor9Co
 # Sentry Configuration
@@ -13,7 +13,8 @@ SENTRY_AUTH_TOKEN=sntrys_eyJpYXQiOjE3NjUyNjQ4ODEuMTAyOTQ3LCJ1cmwiOiJodHRwczovL3N
 EXPO_PUBLIC_LOG_LEVEL=debug
 NODE_ENV=development
 # Logo
-LOGO_IMAGE=https://res.cloudinary.com/dcvdqhqzc/image/upload/v1756537440/bokj2vfio8cenbo6wfea.png
+# LOGO_IMAGE=https://res.cloudinary.com/dcvdqhqzc/image/upload/v1756537440/bokj2vfio8cenbo6wfea.png
+LOGO_IMAGE=https://res.cloudinary.com/dcvdqhqzc/image/upload/v1766525159/aefbv7kr261jzp4sptel.png
 
 # Web Share URL (for policy pages and post sharing)
 EXPO_PUBLIC_WEB_SHARE_URL=http://localhost:8081
