--- a/frontend/app.json
+++ b/frontend/app.json
@@ -130,7 +130,7 @@
       [
         "expo-updates",
         {
-          "username": "teamgodevs"
+          "username": "taatom"
         }
       ]
     ],
@@ -140,15 +140,15 @@
       "fallbackToCacheTimeout": 0
     },
     "extra": {
-      "API_BASE_URL": "http://192.168.1.9:3000",
+      "API_BASE_URL": "http://192.168.1.3:3000",
       "WEB_SHARE_URL": "http://localhost:8081",
       "GOOGLE_MAPS_API_KEY": "AIzaSyBV-jFFSI6o--8SiXjzPYon8WH4slor9Co",
-      "LOGO_IMAGE": "https://res.cloudinary.com/dcvdqhqzc/image/upload/v1756537440/bokj2vfio8cenbo6wfea.png",
+      "LOGO_IMAGE": "https://res.cloudinary.com/dcvdqhqzc/image/upload/v1766525159/aefbv7kr261jzp4sptel.png",
       "EXPO_PROJECT_ID": "c3b80b3d-23d8-4948-abfa-80963e4192d0",
-      "GOOGLE_CLIENT_ID": "236289534770-vvfj6c8611ci84aja7jsvd67rrj4uprv.apps.googleusercontent.com",
-      "GOOGLE_CLIENT_ID_IOS": "236289534770-vvfj6c8611ci84aja7jsvd67rrj4uprv.apps.googleusercontent.com",
-      "GOOGLE_CLIENT_ID_ANDROID": "236289534770-vvfj6c8611ci84aja7jsvd67rrj4uprv.apps.googleusercontent.com",
-      "GOOGLE_REDIRECT_URI": "https://auth.expo.io/@teamgodevs/taatom",
+      "GOOGLE_CLIENT_ID": "139138195988-kclhcnave5urmm7ob2o2erkebp9o4f90.apps.googleusercontent.com",
+      "GOOGLE_CLIENT_ID_IOS": "139138195988-kclhcnave5urmm7ob2o2erkebp9o4f90.apps.googleusercontent.com",
+      "GOOGLE_CLIENT_ID_ANDROID": "139138195988-kclhcnave5urmm7ob2o2erkebp9o4f90.apps.googleusercontent.com",
+      "GOOGLE_REDIRECT_URI": "https://auth.expo.io/@taatom/taatom",
       "PRIVACY_POLICY_URL": "http://localhost:8081/policies/privacy",
       "TERMS_OF_SERVICE_URL": "http://localhost:8081/policies/terms",
       "SUPPORT_URL": "http://localhost:8081/support/contact"
