Auth Realted Issues

--- a/backend/.env
+++ b/backend/.env
@@ -131,3 +131,7 @@ FIREBASE_PRIVATE_KEY_BASE64="LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tXG5NSUlFdmdJQkF
 #Taatom user
 
 TAATOM_OFFICIAL_USER_ID=000000000000000000000001
+
+#Logo
+
+LOGO_IMAGE=https://res.cloudinary.com/dcvdqhqzc/image/upload/v1766525159/aefbv7kr261jzp4sptel.png
