--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -127,3 +127,5 @@ FIREBASE_PRIVATE_KEY_BASE64="LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tXG5NSUlFdmdJQkF
 
 TAATOM_OFFICIAL_USER_ID=taatom_official
 
+#Logo
+LOGO_IMAGE=https://res.cloudinary.com/dcvdqhqzc/image/upload/v1766525159/aefbv7kr261jzp4sptel.png
