--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,17 @@
 node_modules
+
+# Environment files - ignore all .env variations
 .env
+.env.*
+.env.local
+.env.production
+.env.development
+.env.test
+.env.staging
+.env.prod
+.env.dev
+*.env
+*.env.*
+!.env.example
+!.env.template
+!.env.sample
