--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
 node_modules
 node_modules
+
+# Environment files - ignore all .env variations
 .env
+.env.*
+.env.local
+.env.production
+.env.development
+.env.test
+.env.staging
+.env.prod
+.env.dev
+*.env
+*.env.*
+!.env.example
+!.env.template
+!.env.sample
+
 .idea
 .clinerules/byterover-rules.md
 .kilocode/rules/byterover-rules.md
