--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,5 @@ de/rules/byterover-rules.md
 !.vscode/launch.json
 
 # Exclude superAdmin from git to fix EAS build casing issues
-# superAdmin/
-# superAdmin/**                
+superAdmin/
+superAdmin/**                
