Fix EAS prebuildCommand: Use bash script to bypass npx expo wrapper and handle iOS builds

--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -6,7 +6,7 @@
   "build": {
     "production": {
       "distribution": "store",
-      "prebuildCommand": "node ./scripts/setup-google-play-key.js",
+      "prebuildCommand": "bash scripts/setup-google-play-key.sh",
       "ios": {
         "simulator": false,
         "buildConfiguration": "Release"
