Fix: Use executable script path and improve iOS build handling

--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -6,7 +6,7 @@
   "build": {
     "production": {
       "distribution": "store",
-      "prebuildCommand": "bash scripts/setup-google-play-key.sh",
+      "prebuildCommand": "./scripts/setup-google-play-key.sh",
       "ios": {
         "simulator": false,
         "buildConfiguration": "Release"
