--- a/frontend/app.json
+++ b/frontend/app.json
@@ -27,7 +27,7 @@
         "NSLocationAlwaysAndWhenInUseUsageDescription": "This app needs access to your location to tag your posts with location information.",
         "NSMicrophoneUsageDescription": "This app needs access to your microphone for video recording.",
         "NSUserTrackingUsageDescription": "We use your data to personalize your experience and show you relevant content. This helps us improve the app and provide better features.",
-        "NSPrivacyPolicyURL": "https://taatom.com/privacy",
+        "NSPrivacyPolicyURL": "http://localhost:8081/policies/privacy",
         "UIBackgroundModes": [
           "audio",
           "location",
@@ -40,6 +40,11 @@
               "com.taatom.app"
             ]
           }
+        ],
+        "LSApplicationQueriesSchemes": [
+          "mailto",
+          "tel",
+          "sms"
         ]
       },
       "config": {
@@ -140,8 +145,8 @@
       "fallbackToCacheTimeout": 0
     },
     "extra": {
-      "API_BASE_URL": "https://taatombackend-prod-yf2tz.sevalla.app",
-      "WEB_SHARE_URL": "https://taatom.com",
+      "API_BASE_URL": "http://192.168.1.8:3000",
+      "WEB_SHARE_URL": "http://localhost:8081",
       "GOOGLE_MAPS_API_KEY": "AIzaSyBV-jFFSI6o--8SiXjzPYon8WH4slor9Co",
       "LOGO_IMAGE": "https://res.cloudinary.com/dcvdqhqzc/image/upload/v1766525159/aefbv7kr261jzp4sptel.png",
       "EXPO_PROJECT_ID": "c3b80b3d-23d8-4948-abfa-80963e4192d0",
@@ -149,13 +154,9 @@
       "GOOGLE_CLIENT_ID_IOS": "139138195988-kclhcnave5urmm7ob2o2erkebp9o4f90.apps.googleusercontent.com",
       "GOOGLE_CLIENT_ID_ANDROID": "139138195988-kclhcnave5urmm7ob2o2erkebp9o4f90.apps.googleusercontent.com",
       "GOOGLE_REDIRECT_URI": "https://auth.expo.io/@taatom/taatom",
-      "PRIVACY_POLICY_URL": "https://taatom.com/privacy",
-      "TERMS_OF_SERVICE_URL": "https://taatom.com/terms",
-      "SUPPORT_URL": "https://taatom.com/contact",
-      "router": {},
-      "eas": {
-        "projectId": "c3b80b3d-23d8-4948-abfa-80963e4192d0"
-      }
+      "PRIVACY_POLICY_URL": "http://localhost:8081/policies/privacy",
+      "TERMS_OF_SERVICE_URL": "http://localhost:8081/policies/terms",
+      "SUPPORT_URL": "http://localhost:8081/support/contact"
     },
     "owner": "taatom-technologies"
   }
