--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,11 @@
     "@react-navigation/stack": "^7.4.5",
     "@react-three/fiber": "^9.3.0",
     "@sentry/react-native": "~7.2.0",
+    "@shopify/flash-list": "^2.2.0",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.13.2",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "expo": "~54.0.30",
     "expo-auth-session": "~7.0.10",
     "expo-av": "~16.0.8",
@@ -69,8 +73,7 @@
     "react-three-fiber": "^6.0.13",
     "socket.io-client": "^4.8.1",
     "three": "^0.179.1",
-    "yup": "^1.7.0",
-    "babel-plugin-transform-remove-console": "^6.9.4"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
