--- a/frontend/app.json
+++ b/frontend/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Taatom",
     "slug": "taatom",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
@@ -19,8 +19,8 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.taatom.app",
-      "buildNumber": "2",
-      "googleMapsApiKey": "AIzaSyAn6CzFRRsMTsWjXO13Lh-y68faZ6c2vrI",
+      "buildNumber": "3",
+      "googleMapsApiKey": "${EXPO_PUBLIC_GOOGLE_MAPS_IOS_KEY}",
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to let you share photos with your friends.",
         "NSCameraUsageDescription": "This app needs access to your camera to let you take photos for posts.",
@@ -55,14 +55,14 @@
     },
     "android": {
       "package": "com.taatom.app",
-      "versionCode": 2,
+      "versionCode": 3,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#000000"
       },
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyDHRKz1znV6ENYsYll2inBeG_StW_nL_6s"
+          "apiKey": "${EXPO_PUBLIC_GOOGLE_MAPS_ANDROID_KEY}"
         }
       },
       "intentFilters": [
@@ -157,7 +157,11 @@
       "GOOGLE_REDIRECT_URI": "https://auth.expo.io/@taatom/taatom",
       "PRIVACY_POLICY_URL": "https://taatom.com/privacy",
       "TERMS_OF_SERVICE_URL": "https://taatom.com/terms",
-      "SUPPORT_URL": "https://taatom.com/contact"
+      "SUPPORT_URL": "https://taatom.com/contact",
+      "router": {},
+      "eas": {
+        "projectId": "c3b80b3d-23d8-4948-abfa-80963e4192d0"
+      }
     },
     "owner": "taatom-technologies"
   }
