--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -33,21 +33,19 @@
         "EXPO_PUBLIC_SENTRY_ENVIRONMENT": "staging"
       }
     },
-    "build": {
-      "production": {
-        "distribution": "store",
-        "ios": {
-          "simulator": false,
-          "buildConfiguration": "Release"
-        },
-        "android": {
-          "buildType": "app-bundle",
-          "autoIncrement": false
-        },
-        "env": {
-          "EXPO_PUBLIC_ENV": "production",
-          "EXPO_PUBLIC_SENTRY_ENVIRONMENT": "production"
-        }
+    "production": {
+      "distribution": "store",
+      "ios": {
+        "simulator": false,
+        "buildConfiguration": "Release"
+      },
+      "android": {
+        "buildType": "app-bundle",
+        "autoIncrement": true
+      },
+      "env": {
+        "EXPO_PUBLIC_ENV": "production",
+        "EXPO_PUBLIC_SENTRY_ENVIRONMENT": "production"
       }
     }
   },
